--- a/backend/catalog_pbaibol/src/main/java/Readme/Readme
+++ b/backend/catalog_pbaibol/src/main/java/Readme/Readme
@@ -2,3 +2,5 @@
 manager_pbaibol
 create for the database catalog pepol baibol (cpb)
 
+add tis coponet:
+https://www.baeldung.com/spring-boot-react-crud
